# gl_game_experiment

./: .gitignore  CMakeLists.txt  README.md
shaders/: simple.frag  simple.vert
src/: main.c  shaders.c  shaders.h
